MID: 699 MSG: Error al eliminar entorn
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1409 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -45,7 +45,7 @@ error.marcar.alerta.no.llegida=No s''ha pogut marcar l''alerta com a no llegida
 error.esborrar.alerta=No s''ha pogut esborrar l''alerta
 error.crear.alerta=No s''ha pogut crear l''alerta
 
-error.proces.peticio=s''ha produït un error processant la seva petició
+error.proces.peticio=S'ha produït un error processant la seva petició
 error.esborrar.area=No s''ha pogut esborrar l'àrea
 
 error.afegir.persona.area=No s''ha pogut afegir el membre
@@ -253,6 +253,12 @@ error.document.obtenir=Error al obtenir el document
 error.dtoConverter.consultarDomini=No s''ha pogut consultar el domini
 
 error.entornService.entornNoTrobat=No s''ha trobat l'entorn amb id: {0}
+error.entornService.delete=Per a poder esborrar l''entorn, primer cal eliminar {0} de l''entorn
+error.entornService.delete.defpro=les definicions de procés, 
+error.entornService.delete.tipexp=els tipus d'expedient, 
+error.entornService.delete.enumeracions=les enumeracions, 
+error.entornService.delete.dominis=els dominis, 
+error.entornService.delete.consultes=les consultes per tipus, 
 
 error.expedientService.jaExisteix=Ja existeix un altre expedient amb el mateix número ({0})
 error.expedientService.noExisteix=No existeix l'expedient per l'entorn
