MID: 694. MSG: Millorar el filtre del llistat de tasques MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1413 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -27,6 +27,9 @@ expedient.consulta.finalitzat=Finalitzat
 expedient.consulta.canviar=Canviar
 expedient.consulta.informe=Mostrar informe
 expedient.consulta.mostrar.tasques.grup=Mostrar tasques de grup
+expedient.consulta.mostrar.tasques.tots=Mostrar totes
+expedient.consulta.mostrar.tasques.nomes.grup=Mostrar només de grup
+expedient.consulta.mostrar.tasques.nomes.personals=Mostrar només personals
 expedient.consulta.responsable.tasca=Responsable de la tasca
 expedient.consulta.tasques=Llistat de tasques
 expedient.consulta.trobats=Hi ha {0} expedients que coincideixen amb els criteris especificats
