MID: 528. MSG: Merge de la branca 2.6 MID: 708. MSG: Error en eliminar domini de quan té un camp associat MID: 707. MSG: Error en retrotraure l'expedient MID: 706. MSG: Error a la columna "expedient" en el llistat d'expedients.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1425 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -10,6 +10,8 @@ email=El contingut d''aquest camp ha de ser una adreça de correu vàlida
 max.length=El contingut d''aquest camp excedeix la llargada màxima
 in.past=La data ha de ser anterior al dia d''avui
 
+fila.not.blank=La fila no pot estar buida
+
 error.contrasenya.repeticio=La contrasenya i la repetició no coincideixen
 error.persona.codi.repetit=Ja existeix una altra persona amb aquest codi
 error.entorn.codi.repetit=Ja existeix un altre entorn amb aquest codi
@@ -57,9 +59,9 @@ error.esborrar.areatipus=No s''ha pogut esborrar el tipus d'àrea
 error.esborrar.infoarea=No s''ha pogut esborrar la informació de l''area
 error.esborrar.infocarrec=No s''ha pogut esborrar la informació del càrrec
 
-error.validacio=s''han produit errors de validació
+error.validacio=S'han produit errors de validació
 
-error.guardar.dades=No s''ha pogut guardar les dades
+error.guardar.dades=No s'han pogut guardar les dades
 error.esborrar.registre=No s''ha pogut esborrar el registre
 error.guardar.document=No s''ha pogut guardar el document
 error.esborrar.document=No s''ha pogut esborrar el document
