--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -8,6 +8,7 @@ decorator.menu.informes=Informes
 
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.estats.ajax.error=Error al refrescar la llista d'estats
+expedient.llistat.consults.ajax.error=Error al refrescar la llista d'consults
 expedient.llistat.filtre.camp.numero=Número
 expedient.llistat.filtre.camp.titol=Títol
 expedient.llistat.filtre.camp.expedient.tipus=Tipus d'expedient
@@ -41,6 +42,8 @@ expedient.llistat.accio.nou=Nou expedient
 expedient.llistat.confirmacio.anular=Estau segur que voleu anular aquest expedient?
 expedient.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 
+expedient.llistat.consulta_avanzada=Consulta avançada
+
 expedient.tramitacio.massiva=Tramitació massiva
 
 expedient.informe.canviar=Canviar consulta
@@ -69,6 +72,7 @@ expedient.info.pipella.registre=Registre
 
 expedient.tasca.columna.tasca=Tasca
 expedient.tasca.columna.responsable=Responsable
+expedient.tasca.columna.asignada_a=Asignada a
 expedient.tasca.columna.datcre=Creada el
 expedient.tasca.columna.datlim=Data límit
 expedient.tasca.columna.datfi=Finalitzada el
@@ -123,6 +127,7 @@ tasca.llistat.columna.creada=Creada el
 tasca.llistat.columna.limit=Data límit
 tasca.llistat.columna.prioritat=Prioritat
 tasca.llistat.accio.tramitar=Tramitar
+tasca.llistat.accio.tramitar_massivament=Tramitar massivament
 tasca.llistat.accio.delegar=Delegar
 tasca.llistat.accio.agafar=Agafar
 tasca.llistat.accio.reassignar=Reassignar
