MID: 699. MSG: Error al eliminar entorn MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1429 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -139,6 +139,8 @@ tasca.llistat.confirmacio.suspendre=Estau segur que voleu suspendre aquesta tasc
 tasca.llistat.confirmacio.reprendre=Estau segur que voleu reprendre aquesta tasca?
 tasca.llistat.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasca? Aquesta acció no es pot tornar enrera una vegada executada.
 tasca.llistat.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
+tasca.llistat.reassignacions.massiva=Reassignacion massiva
+tasca.llistat.reassignacions.programacio=Programació
 
 tasca.tramitacio.boto.guardar=Guardar
 tasca.tramitacio.boto.validar=Validar
@@ -164,6 +166,15 @@ perfil.usuari.tasques=Tasques
 perfil.usuari.informes=Informes
 perfil.usuari.completa=Completa
 perfil.usuari.reducida=Reduïda
+perfil.usuari.nota=Nota
+perfil.usuari.nota.generales=Generales
+perfil.usuari.nota.filtres=Filtres per defecte
+perfil.usuari.consulta=Consulta per tipus
+perfil.usuari.nota.consulta=Consulta per tipus per defecte que s'ha d'obrir.
+perfil.usuari.nota.pantalla=Veure la pantalla d'expedients o de tasques per defecte.
+perfil.usuari.nota.cabecera=Mida i format de capcalera.
+perfil.usuari.nota.entorn=Entorn per defecte que s'ha d'obrir.
+perfil.usuari.nota.numelements=Numero d'elements que s'han de mostrar per defecte en les taules paginades.
 
 termini.data_ini=Data inici
 termini.data_fi=Data fi
