MID: 716. MSG: Botó d'activar i desactivar tokens
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1441 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -184,6 +184,8 @@ error.ordre.estat=No s''ha pogut canviar l'ordre de l'estat
 
 error.retrocedir.token=No s''ha pogut retrocedir el token
 
+error.activar.token=No s''ha pogut activar el token
+
 error.guardar.perfil=No s''ha pogut guardar el perfil
 error.modificar.contrasenya=No s''ha pogut modificar la contrasenya
 
