--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -537,6 +537,10 @@ info.informacio.guardat=La informació s'ha guardat correctament
 
 info.token.retrocedit=El token s'ha retrocedit correctament
 
+info.token.activar=El token s'ha activat correctament
+info.token.activar.confirmacio=Esteu segur activar aquest token?
+info.token.desactivar.confirmacio=Esteu segur desactivar aquest token?
+
 txt.home=Home
 txt.dona=Dona
 info.perfil.guardat=El perfil s'ha guardat amb èxit
