--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -143,6 +143,7 @@ error.modificar.doc.signat=No es pot modificar un document signat
 error.generar.document=No s''ha pogut generar el document
 error.generar.document.buit=La plantilla ha produit un document buit
 error.modificar.document.tipus=No hi ha cap document per modificar
+error.llistat.pendent.signar=No s'ha pogut consultar la llista de fitxers de l'portasignatura pendent de signar
 
 error.modificar.dades.exp=No s''han pogut modificar les dades de l'expedient
 
