--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1418,6 +1418,7 @@ tasca.signa.camp.passwd=Contrasenya del certificat
 tasca.signa.obtenint.certs=Obtenint certificats disponibles...
 tasca.signa.alert.nosel=No s'ha seleccionat cap certificat per a signar
 tasca.signa.alert.error=Error al signar el document (comprovi la contrasenya)
+tasca.signa.alert.no.document=Error al obtenir el document
 tasca.signa.alert.certerr=Error al obtenir la llista de certificats disponibles
 tasca.signa.massiu.no_es_podran=No es poden signar documents massivament
 
