MID: 713. MSG: Cambio en el callback del portafirmas para funcionar con portafib MID: 718. MSG: Control d'errors applet de signatura MID: 655. MSG: Jocs de proves amb Selelium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1452 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1419,6 +1419,7 @@ tasca.signa.obtenint.certs=Obtenint certificats disponibles...
 tasca.signa.alert.nosel=No s'ha seleccionat cap certificat per a signar
 tasca.signa.alert.error=Error al signar el document (comprovi la contrasenya)
 tasca.signa.alert.no.document=Error al obtenir el document
+tasca.signa.alert.no.document.signar=Error al signar el document
 tasca.signa.alert.certerr=Error al obtenir la llista de certificats disponibles
 tasca.signa.massiu.no_es_podran=No es poden signar documents massivament
 
