MID: 725 MSG: Buidat de la taula de logs
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1453 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -310,6 +310,7 @@ error.no.tasc.selec=No ha seleccionat cap tasca
 error.no.exp.execmasiv=No s'ha trobat cap expedient que es pugui executar massivament
 
 error.reindexar.expedient=Error al reindexar expedient
+error.buidarlog.expedient=Error al eliminar la informació de registre de l'expedient
 
 error.no.massiu=Error al programar les accions massives
 error.seq.any=El contingut daquesta taula té camp buits o amb format incorrecte
