MID: 528. MSG: Merge de la branca 2.6 MID: 727. MSG: Error al crear nova variable MID: 724. MSG: Optimització recompte de tasques MID: 714. MSG: Notificació electrònica de Sistra en Helium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1460 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -171,6 +171,7 @@ perfil.usuari.nota.generales=Generales
 perfil.usuari.nota.filtres=Filtres per defecte
 perfil.usuari.consulta=Consulta per tipus
 perfil.usuari.nota.consulta=Consulta per tipus per defecte que s'ha d'obrir.
+perfil.usuari.nota.tipusexpedientdefecte=Tipus d'expedient per defecte seleccionat.
 perfil.usuari.nota.pantalla=Veure la pantalla d'expedients o de tasques per defecte.
 perfil.usuari.nota.cabecera=Mida i format de capcalera.
 perfil.usuari.nota.entorn=Entorn per defecte que s'ha d'obrir.
