--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -311,6 +311,7 @@ error.no.exp.execmasiv=No s'ha trobat cap expedient que es pugui executar massiv
 
 error.reindexar.expedient=Error al reindexar expedient
 error.buidarlog.expedient=Error al eliminar la informació de registre de l'expedient
+error.reprendre.expedient=Error al reprendre l'expedient
 
 error.no.massiu=Error al programar les accions massives
 error.seq.any=El contingut daquesta taula té camp buits o amb format incorrecte
