--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -132,6 +132,8 @@ expedient.eines.confirm_reindexar_expedient=Estau segur que voleu reindexar l'ex
 expedient.eines.confirm_reindexar_expedients=Estau segur que voleu reindexar el(s) expedient(s)?
 expedient.eines.confirm_buidarlog_expedient=Estau segur que voleu eliminar la informació de registre de l'expedient? Un cop realitzada aquesta acció, no es podrà retrocedir l'expedient mitjançant la informació de registre!!!
 expedient.eines.confirm_buidarlog_expedients=Estau segur que voleu eliminar la informació de registre del(s) expedient(s)? Un cop realitzada aquesta acció, no es podran retrocedir els expedients mitjançant la informació de registre!!!
+expedient.eines.confirm_reprendre_expedient=Estau segur que voleu reprendre l'expedient?
+expedient.eines.confirm_reprendre_expedients=Estau segur que voleu reprendre l'expedient(s)?
 expedient.eines.confirm_reassignar_expedients=Estau segur que voleu reassignar la(es) tasca(ques)?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
@@ -142,6 +144,8 @@ expedient.eines.execucio_scripts=Execució d'scripts
 expedient.eines.reindexa_proces=Reindexar l'expedient
 expedient.eines.reindexar.expedients=Reindexar expedients
 expedient.eines.buidarlog_proces=Eliminar la informació de registre de l'expedient
+expedient.eines.reprendre_expedient=Reprendre l'expedient
+expedient.eines.reprendre_expedients=Reprendre els expedients
 expedient.eines.buidarlog.expedients=Eliminar la informació de registre dels expedients
 expedient.eines.reassignar.expedients=Reassignar tasca
 expedient.eines.script=Script
@@ -222,6 +226,7 @@ expedient.log.accio.EXPEDIENT_ACCIO=Executar acció de l'expedient
 expedient.log.accio.EXPEDIENT_RETROCEDIR=Retrocedir accions de l'expedient
 expedient.log.accio.PROCES_DOCUMENT_SIGNAR=Procesar document del portasignatures
 expedient.log.accio.EXPEDIENT_RETROCEDIR_TASQUES=Retrocedir tasques de l'expedient
+expedient.log.accio.EXPEDIENT_FINALIZTAR=Finalitzar expedient
 expedient.log.objecte=Element
 expedient.log.objecte.TASCA=Tasca
 expedient.log.objecte.PROCES=Procés
@@ -469,10 +474,12 @@ info.accio.massiu.executat=S&#39;ha programat la execució d''accions a {0} exped
 info.reindexar.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
 info.buidarlog.massiu.executat=S&#39;ha programat la eliminació de la informació de registre de {0} expedient(s)
 info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
+info.accio.massiu.reprendre_expedient=S&#39;ha programat la represa de {0} expedient(s)
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
 info.expedient.buidatlog=La informació de registre de l'expedient s'ha eliminat correctament
+info.expedient.reprendre=L'expedient s'ha reprès correctament
 info.reindexar.executat=La reindexació s&#39;ha realitzat correctament
 info.reindexar.executat.nprimers=La reindexació s&#39;ha executat correctament en els primers {0} expedients
 info.massiu.permisos.no=No disposa de permisos per a modificar els expedients
