MID: 528. MSG: Merge de la branca 2.6 MID: 655. MSG: Jocs de proves amb Selelium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1465 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -501,6 +501,7 @@ info.dada.modificat=La dada s'ha modificat correctament
 info.dada.massiu.modificat=S&#39;ha programat la modificació de la variable {0} a {1} expedient(s)
 info.dada.massiu.error=S&#39;ha produit un error al programar la modificació de la variable {0}
 
+info.document.generat=El document s'ha generat correctament
 info.document.adjuntat=El document s'ha adjuntat correctament
 info.document.adjuntats=Els documents s'han adjuntat correctament
 
@@ -1431,6 +1432,7 @@ tasca.signa.camp.cert=Certificat per a signar
 tasca.signa.camp.passwd=Contrasenya del certificat
 tasca.signa.obtenint.certs=Obtenint certificats disponibles...
 tasca.signa.alert.nosel=No s'ha seleccionat cap certificat per a signar
+tasca.signa.alert.nocert=No hi ha cap certificat per a signar
 tasca.signa.alert.error=Error al signar el document (comprovi la contrasenya)
 tasca.signa.alert.no.document=Error al obtenir el document
 tasca.signa.alert.no.document.signar=Error al signar el document
