--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -203,6 +203,7 @@ error.afegir.permisos.tipusexp.permis=No té permis per a afegir els permisos
 error.esborrar.permisos.tipusexp=No s''han pogut esborrar els permisos
 error.esborrar.permisos.tipusexp.permis=No té permis per a esborrar els permisos
 
+error.validar.dades=Error en la validació de les dades
 error.validar.signatura=Error en la validació de la signatura
 error.rebre.signatura=Error rebent la signatura del document
 
