MID: 528. MSG: Merge de la branca 2.6 MID: 732. MSG: Botón de eliminar alertas
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1472 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -35,6 +35,7 @@ error.camp.domini=Seleccioni un o altre
 error.camp.dada.valida=La fecha introducida no es una válida
 error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
 error.info.expedient.imatgeproces=No hi ha imatge per a aquesta definició de procés
+error.descarregar.fitxer=Error al descarregar el fitxer amb token
 
 error.validator=Error intern de validació
 
