--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -68,6 +68,8 @@ expedient.dada.dades_tasques=Dades de les tasques
 expedient.dada.afegir_dada_tasca=Afegir nova dada a la tasca
 expedient.dada.expedient.cap=Aquest expedient no conté cap dada
 expedient.dada.proces.cap=Aquest procés no conté cap dada
+expedient.document.expedient.cap=Aquest expedient no conté cap document
+expedient.document.proces.cap=Aquest procés no conté cap document
 expedient.document.adjuntar=Adjuntar nou document
 expedient.document.modificar_adjunt=Modificar document adjunt
 expedient.document.titol=Títol
