--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -44,6 +44,10 @@ expedient.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest exp
 
 expedient.llistat.consulta_avanzada=Consulta avançada
 
+expedient.document.no_disponible=Document no disponible
+expedient.document.signat=Document signat (clic per veure detalls)
+expedient.document.registrat=Document registrat (clic per veure detalls)
+
 expedient.tramitacio.massiva=Tramitació massiva
 
 expedient.informe.canviar=Canviar consulta
@@ -89,6 +93,7 @@ expedient.tasca.confirmacio.suspendre=Estau segur que voleu suspendre aquesta ta
 expedient.tasca.confirmacio.reprendre=Estau segur que voleu reprendre aquesta tasca?
 expedient.tasca.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasca? Aquesta acció no es pot tornar enrera una vegada executada.
 expedient.tasca.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
+expedient.tasca.doc.generar.confirm=Es generarà un document. Voleu continuar?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
 
 expedient.accio.aturar.titol=Aturar expedient
@@ -147,6 +152,8 @@ tasca.tramitacio.boto.validar=Validar
 tasca.tramitacio.boto.restaurar=Restaurar
 tasca.tramitacio.boto.finalitzar=Finalitzar
 
+expedient.boto.nou_document=Nou document
+
 enum.tasca.etiqueta.CA=Cancel·lada
 enum.tasca.etiqueta.SU=Suspesa
 enum.tasca.etiqueta.PD=Pendent
@@ -160,6 +167,7 @@ comu.filtre.netejar=Netejar
 comu.boto.accions=Accions
 comu.boto.cancelar=Cancel·lar
 comu.boto.generar=Generar
+comu.boto.tancar=Tancar
 
 perfil.usuari.expedients=Expedients
 perfil.usuari.tasques=Tasques
