--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -74,6 +74,14 @@ expedient.info.pipella.documents=Documents
 expedient.info.pipella.terminis=Terminis
 expedient.info.pipella.registre=Registre
 
+expedient.termini.confirmar.iniciar=Estau segur que voleu iniciar aquest termini?
+expedient.termini.confirmar.aturar=Estau segur que voleu aturar aquest termini?
+expedient.termini.confirmar.continuar=Estau segur que voleu continuar aquest termini?
+expedient.termini.confirmar.cancelar=Estau segur que voleu calcel·lar aquest termini?
+expedient.termini.nomostrar=No hi ha terminis per a mostrar
+expedient.termini.expedient.cap=Aquest expedient no conté cap termini
+expedient.termini.proces.cap=Aquest proces no conté cap termini
+
 expedient.tasca.columna.tasca=Tasca
 expedient.tasca.columna.responsable=Responsable
 expedient.tasca.columna.asignada_a=Asignada a
