MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1476 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -68,6 +68,8 @@ expedient.dada.dades_tasques=Dades de les tasques
 expedient.dada.afegir_dada_tasca=Afegir nova dada a la tasca
 expedient.dada.expedient.cap=Aquest expedient no conté cap dada
 expedient.dada.proces.cap=Aquest procés no conté cap dada
+expedient.dada.agrupacio.cap=Aquesta agrupació no conté cap dada visible
+expedient.dada.ocults=Visualitzar camps ocults
 expedient.document.expedient.cap=Aquest expedient no conté cap document
 expedient.document.proces.cap=Aquest procés no conté cap document
 expedient.document.adjuntar=Adjuntar nou document
@@ -497,6 +499,7 @@ info.tasca.massiu.registre.esborrar=S&#39;ha programat la eliminació d&#39;un re
 info.tasca.massiu.registre.guardar=S&#39;ha programat el guardat d&#39;un registre a {0} tasca(ques)
 
 info.dada.proces.esborrada=La dada ha estat esborrada del procés
+info.dada.proces.modificada=La dada s'ha modificat correctament
 info.dada.tasca.esborrada=La dada ha estat esborrada de la tasca
 
 info.dada.modificat=La dada s'ha modificat correctament
