--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -68,11 +68,17 @@ expedient.info.accio.relacionar=Afegir relació...
 expedient.info.accio.aturar=Aturar...
 expedient.info.accio.anular=Anul·lar...
 expedient.info.accio.script=Executar script...
+expedient.info.accio.buidarlog=Eliminar informació registre...
 expedient.info.pipella.tasques=Tasques
 expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
 expedient.info.pipella.terminis=Terminis
 expedient.info.pipella.registre=Registre
+expedient.info.confirm.dada.esborrar=Estau segur que voleu esborrar aquesta dada de l'expedient?
+expedient.info.permis.no=No disposa de permís per a modificar l'expedient
+
+expedient.dada.borrar.error=S'ha produït un error al interntar esborrar la dada de l'expedient
+expedient.dada.modificar.error=S'ha produït un error al interntar modificar la dada de l'expedient
 
 expedient.termini.confirmar.iniciar=Estau segur que voleu iniciar aquest termini?
 expedient.termini.confirmar.aturar=Estau segur que voleu aturar aquest termini?
@@ -118,6 +124,7 @@ expedient.accio.script.camp.script=Script
 expedient.accio.script.boto.executar=Executar
 expedient.accio.modificar.titol=Modificar informació de l'expedient
 expedient.accio.modificar.boto.modificar=Modificar
+expedient.accio.buidarlog.confirmacio=Estau segur que voleu eliminar la informació de registre de l'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 
 tasca.llistat.titol=Consulta de tasques
 tasca.llistat.filtre.camp.titol=Tasca
@@ -161,6 +168,7 @@ tasca.tramitacio.boto.restaurar=Restaurar
 tasca.tramitacio.boto.finalitzar=Finalitzar
 
 expedient.boto.nou_document=Nou document
+expedient.boto.nova_dada=Nova dada
 
 enum.tasca.etiqueta.CA=Cancel·lada
 enum.tasca.etiqueta.SU=Suspesa
