MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1477 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -234,6 +234,7 @@ error.enumeracio.emprada.camp=Aquesta enumeració no es pot esborrar perquè està 
 error.ordre.enumeracio=No s''ha pogut modificar l'ordre
 
 error.consulta.informe.nonhiha=Aquesta consulta no té configurat cap informe
+error.consulta.informe.expedients.nonhiha=No s'ha trobat cap expedient per generar l'informe
 error.consulta.informe.nofiltre=Seleccioni primer una consulta
 error.consulta.tipexp.noaut=No està autoritzat per a consultar aquest tipus d''expedient
 error.ordre.consulta=No s''ha pogut modificar l'ordre
