--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -88,6 +88,12 @@ expedient.termini.nomostrar=No hi ha terminis per a mostrar
 expedient.termini.expedient.cap=Aquest expedient no conté cap termini
 expedient.termini.proces.cap=Aquest proces no conté cap termini
 
+expedient.tasca.expedient.cap=Aquest expedient no conté cap tasca
+expedient.tasca.proces.cap=Aquest proces no conté cap tasca
+
+expedient.log.expedient.cap=Aquest expedient no conté cap log
+expedient.log.proces.cap=Aquest proces no conté cap log
+
 expedient.tasca.columna.tasca=Tasca
 expedient.tasca.columna.responsable=Responsable
 expedient.tasca.columna.asignada_a=Asignada a
