MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1480 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -41,6 +41,9 @@ expedient.llistat.accio.seleccio.netejar=Netejar selecció
 expedient.llistat.accio.nou=Nou expedient
 expedient.llistat.confirmacio.anular=Estau segur que voleu anular aquest expedient?
 expedient.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest expedient? Aquesta acció no es pot tornar enrera una vegada executada.
+expedient.llistat.tasques.pendents.mostrar=Mostrar tasques pendents
+expedient.llistat.tasques.pendents.ocultar=Ocultar tasques pendents
+expedient.llistat.tasques.pendents.nohiha=Aquest expedient no te cap tasca pendent per a l'usuari actual
 
 expedient.llistat.consulta_avanzada=Consulta avançada
 
