MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1481 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -193,6 +193,7 @@ comu.boto.accions=Accions
 comu.boto.cancelar=Cancel·lar
 comu.boto.generar=Generar
 comu.boto.tancar=Tancar
+comu.tots=Tots
 
 perfil.usuari.expedients=Expedients
 perfil.usuari.tasques=Tasques
