MID: 528. MSG: Merge de la branca 2.6 MID: 714. MSG: Notificació electrònica de Sistra en Helium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1482 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -309,6 +309,7 @@ error.codi.var.incorrecte=El codi de la variable no pot començar per majúscula, 
 error.no.tiexep.selec=No hi ha cap tipus d''expedient seleccionat 
 error.no.exp.selec=No ha seleccionat cap expedient
 error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap document annexat per modificar
+error.no.exp.selec.diferenttipus=Els expedients seleccionats no pot ser de diferent tipus d'expedient
 error.no.tasc.selec=No ha seleccionat cap tasca
 error.no.exp.execmasiv=No s'ha trobat cap expedient que es pugui executar massivament
 
@@ -317,6 +318,7 @@ error.buidarlog.expedient=Error al eliminar la informació de registre de l'exped
 error.reprendre.expedient=Error al reprendre l'expedient
 
 error.no.massiu=Error al programar les accions massives
+error.no.massiu.expedients=Error en recuperar la llista dels expedients seleccionats
 error.seq.any=El contingut daquesta taula té camp buits o amb format incorrecte
 error.expedientTipus.any.repetit=Hi ha anys repetits a les seqüències actuals
 error.expedientTipus.any.format.any=Hi ha anys amb format incorrecte a les seqüències actuals
