--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -35,7 +35,8 @@ expedient.llistat.accio.consultar=Consultar
 expedient.llistat.accio.aturar=Aturar
 expedient.llistat.accio.anular=Anul·lar
 expedient.llistat.accio.esborrar=Esborrar
-expedient.llistat.accio.massiva=Tramitació massiva
+expedient.llistat.accio.massiva=Acció massiva
+expedient.llistat.tramitacio.massiva=Tramitació massiva
 expedient.llistat.accio.seleccio.tots=Seleccionar tots els expedients
 expedient.llistat.accio.seleccio.netejar=Netejar selecció
 expedient.llistat.accio.nou=Nou expedient
