MID: 528. MSG: Merge de la branca 2.6 MID: 736. MSG: Afegir funcion handler per activar-desactivar token
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1484 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -94,6 +94,10 @@ expedient.termini.proces.cap=Aquest proces no conté cap termini
 
 expedient.tasca.expedient.cap=Aquest expedient no conté cap tasca
 expedient.tasca.proces.cap=Aquest proces no conté cap tasca
+expedient.tasca.pendents=No hi ha tasques pendents de completar
+expedient.tasca.columna.id=Id tasca
+expedient.tasca.iniciat.el=Iniciat el
+expedient.tasca.temps.execucio=Temps execució
 
 expedient.log.expedient.cap=Aquest expedient no conté cap log
 expedient.log.proces.cap=Aquest proces no conté cap log
