--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -341,6 +341,8 @@ expedient.monitor.blockedtime=T. bloqueo
 expedient.monitor.os-name=Sistema operativo
 expedient.monitor.os-arch=Arquitectura
 expedient.monitor.os-version=Versi&oacute;n
+expedient.monitor.space.total=Total space
+expedient.monitor.space.free=Free space
 		
 temps.clau=Clau
 temps.darrera=Última
@@ -688,6 +690,7 @@ comuns.refrescar=Refrescar
 comuns.mes.dades=Més dades
 comuns.objectsPerPage=Resultats per pàgina
 comuns.mesures=Mesures
+comuns.sistema=Sistema
 comuns.tots.tipus=Tots els tipus
 comuns.expedients=Expedients
 comuns.informes=Informes
