Eliminar System.out
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1486 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -27,6 +27,7 @@ error.expedient.titolrepetit=Ja existeix un expedient d''aquest tipus amb el mat
 error.expedient.numerorepetit=Ja existeix un expedient d''aquest tipus amb el mateix número
 error.expedient.relacio.esborrar=Error al esborrar la relació de l'expedient
 error.expedient.relacionar=Error al relacionar el expediente
+error.camp.codi.buit=El camp codi no pot estar buit
 error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
 error.camp.enumdomcons.buit=s''ha d''especificar una enumeració, un domini o una consulta
