--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -503,6 +503,7 @@ info.tasca.massiu.registre.guardar=S&#39;ha programat el guardat d&#39;un regist
 
 info.dada.proces.esborrada=La dada ha estat esborrada del procés
 info.dada.proces.modificada=La dada s'ha modificat correctament
+info.dada.nova.proces.creada=La dada s'ha creat correctament
 info.dada.tasca.esborrada=La dada ha estat esborrada de la tasca
 
 info.dada.modificat=La dada s'ha modificat correctament
