--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -83,6 +83,7 @@ expedient.info.permis.no=No disposa de permís per a modificar l'expedient
 
 expedient.dada.borrar.error=S'ha produït un error al interntar esborrar la dada de l'expedient
 expedient.dada.modificar.error=S'ha produït un error al interntar modificar la dada de l'expedient
+expedient.nova.data.camp.variable.buit=El camp variable no pot estar buit
 
 expedient.termini.confirmar.iniciar=Estau segur que voleu iniciar aquest termini?
 expedient.termini.confirmar.aturar=Estau segur que voleu aturar aquest termini?
@@ -183,6 +184,11 @@ tasca.tramitacio.boto.finalitzar=Finalitzar
 
 expedient.boto.nou_document=Nou document
 expedient.boto.nova_dada=Nova dada
+
+expedient.nova.data.nova=Nova variable
+expedient.nova.data.existent=Variables definides en el procés
+expedient.nova.data.string=Nova variable de tipus String
+expedient.nova.data.selecciona=Selecciona una opció
 
 enum.tasca.etiqueta.CA=Cancel·lada
 enum.tasca.etiqueta.SU=Suspesa
