MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1487 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -32,6 +32,7 @@ expedient.llistat.columna.finalitzat=Finalitzat el
 expedient.llistat.columna.tipus=Tipus
 expedient.llistat.columna.estat=Estat
 expedient.llistat.accio.consultar=Consultar
+expedient.llistat.accio.consultar.expedient=Consultar expedient
 expedient.llistat.accio.aturar=Aturar
 expedient.llistat.accio.anular=Anul·lar
 expedient.llistat.accio.esborrar=Esborrar
