MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1488 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -172,6 +172,8 @@ error.reassignar.tasca=No s''ha pogut reassignar la tasca {0}
 error.suspendre.tasca=No s''ha pogut suspendre la tasca {0}
 error.reprendre.tasca=No s''ha pogut reprendre la tasca {0}
 error.cancelar.tasca=No s''ha pogut cancel·lar la tasca {0}
+error.alliberar.tasca=No s''ha pogut alliberar la tasca {0}
+error.agafar.tasca=No s''ha pogut agafar la tasca {0}
 
 error.iniciar.termini=No s''ha pogut iniciar el termini
 error.aturar.termini=No s''ha pogut aturar el termini
