--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -5,6 +5,9 @@ decorator.rol.usuari=Usuari
 decorator.menu.expedients=Expedients
 decorator.menu.tasques=Tasques
 decorator.menu.informes=Informes
+decorator.menu.consultes=Consultes
+decorator.menu.administracio=Administració
+decorator.menu.administracio.tasques.execucio=Tasques en execució
 
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.estats.ajax.error=Error al refrescar la llista d'estats
@@ -105,6 +108,7 @@ expedient.log.expedient.cap=Aquest expedient no conté cap log
 expedient.log.proces.cap=Aquest proces no conté cap log
 
 expedient.tasca.columna.tasca=Tasca
+expedient.tasca.columna.tasca.activa=Tasca activa
 expedient.tasca.columna.responsable=Responsable
 expedient.tasca.columna.asignada_a=Asignada a
 expedient.tasca.columna.datcre=Creada el
@@ -123,6 +127,7 @@ expedient.tasca.confirmacio.suspendre=Estau segur que voleu suspendre aquesta ta
 expedient.tasca.confirmacio.reprendre=Estau segur que voleu reprendre aquesta tasca?
 expedient.tasca.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasca? Aquesta acció no es pot tornar enrera una vegada executada.
 expedient.tasca.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
+expedient.tasca.confirmacio.agafar=Estau segur que voleu agafar aquesta tasca?
 expedient.tasca.doc.generar.confirm=Es generarà un document. Voleu continuar?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
 
