--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -539,6 +539,10 @@ info.canvi.versio.massiu=S&#39;ha programat el canvi de versió de {0} expedient(
 info.expedient.iniciat=L&#39;expedient s&#39;ha iniciat correctament: {0}
 
 info.tasca.reassignada=La tasca s&#39;ha reassignat correctament
+info.tasca.reprendre=La tasca s&#39;ha reprès correctament
+info.tasca.suspendre=La tasca s&#39;ha suspès correctament
+info.tasca.cancelar=La tasca s&#39;ha cancel·lat correctament
+info.tasca.reassignada=La tasca s&#39;ha reassignat correctament
 info.tasca.alliberada=La tasca s&#39;ha retornat als seus responsables originals
 
 info.termini.iniciat=El termini s'ha iniciat correctament
