MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1492 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -10,8 +10,10 @@ decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
 
 expedient.llistat.titol=Consulta d'expedients
+expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
 expedient.llistat.estats.ajax.error=Error al refrescar la llista d'estats
 expedient.llistat.consults.ajax.error=Error al refrescar la llista d'consults
+expedient.llistat.filtre.camp=Filtre per
 expedient.llistat.filtre.camp.numero=Número
 expedient.llistat.filtre.camp.titol=Títol
 expedient.llistat.filtre.camp.expedient.tipus=Tipus d'expedient
@@ -26,9 +28,11 @@ expedient.llistat.filtre.camp.geopos=Geoposició
 expedient.llistat.filtre.camp.georef=Codi georeferencial
 expedient.llistat.filtre.camp.coordx=Coordenada X
 expedient.llistat.filtre.camp.coordy=Coordenada Y
-expedient.llistat.filtre.camp.tasques=Només amb tasques pendents
-expedient.llistat.filtre.camp.alertes=Només amb alertes
-expedient.llistat.filtre.camp.anulats=Mostrar anul·lats
+expedient.llistat.filtre.camp.tasques=Amb tasques actives
+expedient.llistat.filtre.camp.alertes=Amb alertes
+expedient.llistat.filtre.camp.anulats=Anul·lats
+expedient.llistat.filtre.camp.personals=Amb tasques personals
+expedient.llistat.filtre.camp.usuari=Amb tasques d'usuari
 expedient.llistat.columna.expedient=Expedient
 expedient.llistat.columna.iniciat=Iniciat el
 expedient.llistat.columna.finalitzat=Finalitzat el
@@ -130,6 +134,7 @@ expedient.tasca.confirmacio.alliberar=Estau segur que voleu alliberar aquesta ta
 expedient.tasca.confirmacio.agafar=Estau segur que voleu agafar aquesta tasca?
 expedient.tasca.doc.generar.confirm=Es generarà un document. Voleu continuar?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
+expedient.tasca.activa.nohiha=No hi ha tasques actives per a mostrar
 
 expedient.accio.aturar.titol=Aturar expedient
 expedient.accio.script.confirmacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
@@ -148,19 +153,21 @@ expedient.accio.modificar.boto.modificar=Modificar
 expedient.accio.buidarlog.confirmacio=Estau segur que voleu eliminar la informació de registre de l'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 
 tasca.llistat.titol=Consulta de tasques
-tasca.llistat.filtre.camp.titol=Tasca
+tasca.llistat.filtre.camp.titol=Titol
 tasca.llistat.filtre.camp.expedient=Expedient
 tasca.llistat.filtre.camp.prioritat=Prioritat
 tasca.llistat.filtre.camp.tipexp=Tipus d'expedient
-tasca.llistat.filtre.camp.titol=Tasca
+tasca.llistat.filtre.camp.tasca=Tasca
 tasca.llistat.filtre.camp.datcre=Data creació
 tasca.llistat.filtre.camp.datcre.ini=Data creació inicial
 tasca.llistat.filtre.camp.datcre.fin=Data creació final
 tasca.llistat.filtre.camp.datlim=Data límit
 tasca.llistat.filtre.camp.datlim.ini=Data límit inicial
 tasca.llistat.filtre.camp.datlim.fin=Data límit final
-tasca.llistat.filtre.camp.mostrar.usuari=Mostrar tasques d'usuari
-tasca.llistat.filtre.camp.mostrar.grup=Mostrar tasques de grup
+
+tasca.llistat.filtre.camp.mostrar.usuari=Tasques personals
+tasca.llistat.filtre.camp.mostrar.grup=Tasques de grup
+
 tasca.llistat.columna.titol=Tasca
 tasca.llistat.columna.expedient=Expedient
 tasca.llistat.columna.tipexp=Tipus d'expedient
@@ -196,6 +203,7 @@ expedient.nova.data.existent=Variables definides en el procés
 expedient.nova.data.string=Nova variable de tipus String
 expedient.nova.data.selecciona=Selecciona una opció
 
+enum.tasca.etiqueta.grup=Tasca de grup
 enum.tasca.etiqueta.CA=Cancel·lada
 enum.tasca.etiqueta.SU=Suspesa
 enum.tasca.etiqueta.PD=Pendent
