MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1495 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -276,6 +276,8 @@ error.expedientService.noExisteix=No existeix l'expedient per l'entorn
 error.expedientService.generarDocument=No s''ha pogut generar el document
 error.expedientService.trobarPersona=No s''ha trobat la persona amb codi '{0}'
 
+error.expedientService.noExisteix.tipus=No tens permisos sobre cap tipus d'expedient
+
 error.orgService.trobarArea=No s''ha trobat l''area amb id: {0}
 error.orgService.trobarPersona=No s''ha trobat la persona amb el codi: {0}
 error.orgService.trobarCarrec=No s''ha trobat el càrrec amb id: {0}
