MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1496 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -152,6 +152,7 @@ error.modificar.dades.exp=No s''han pogut modificar les dades de l'expedient
 error.executar.script=No s''ha pogut executar L''script
 error.modificar.variable=No s''ha pogut modificar la variable
 error.expedient.ja.anulat=Aquest expedient ja està anulat
+error.expedient.ja.repres=Aquest expedient ja està reprès
 error.aturar.expedient=No s''ha pogut aturar l'expedient
 error.cancelar.expedient=No s''ha pogut cancel·lar l'expedient
 error.expedient.ja.aturat=Aquest expedient ja està aturat
